--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Version v52 - Diminished Resolutions Interface -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,7 +30,7 @@
         }
         #dcontainer {
             width: 680px;
-            height: 160px;
+            height: 170px;
             background: #2a2a2a;
             border-radius: 10px;
             padding: 20px;
@@ -38,7 +39,7 @@
         }
         #dtextcontainer{
             margin: 12px;
-            margin-top: 6px;
+            margin-top: 4px;
             border: 60px;
             position: absolute;
             color: white;
@@ -47,7 +48,6 @@
         .dtext {
             top: 32px;
             color: white;
-            margin-bottom: 5px;
         }
         body {
             margin: auto;
@@ -846,7 +846,7 @@
             <div id="dtextcontainer">
                 <div id="dtext"><span style="white-space: pre-line; font-size: 14px;">Every diminished 7 chord can resolve to 4 unique dominant 7 chords by moving any chord tone down by a semitone.
 
-                This project aims to help visualise these resolution pathways by starting from a diminished 7, or working backwards from a resolution key. Use the dropdown menu to switch between these modes. 
+                This project aims to help visualise these resolution pathways by starting from a diminished 7, or working backwards from a resolution key. Use the dropdown menu to switch between these modes, and click around the circle of fifths and chord suggestions to set your desired pathway.
 
                 The six most common jazz cadences are displayed, opening potential modulations to and from any key, but these pathways are non exhaustive, so please explore your own modal and non-tonic resolutions :)</p></span></div>
             </div>
