--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         }
         
         .left-box.wide {
-            width: 220px;
+            width: 226px;
         }
         
         .left-box.active {
@@ -413,12 +413,12 @@
             ];
 
             let dompivotlist = [
-                { label: "G (Perfect)" },
-                { label: "Bb (Back Door)" },
-                { label: "B (Screen Door)" },
-                { label: "Db (Tritone Perfect)" },
-                { label: "E (Tritone Back Door)" },
-                { label: "F (Tritone Screen Door / Plagal)" }
+                { label: "G7 (Perfect)" },
+                { label: "Bb7 (Back Door)" },
+                { label: "B7 (Screen Door)" },
+                { label: "Db7 (Tritone Perfect)" },
+                { label: "E7 (Tritone Back Door)" },
+                { label: "F7 (Tritone Screen Door / Plagal)" }
             ];
 
             let leftBoxes = domlist;
@@ -630,12 +630,12 @@
                         break;
                     case 1:
                         dompivotlist = [
-                            { label: " " + i1 + " (Perfect)" },
-                            { label: " " + i2 + " (Back Door)" },
-                            { label: " " + i3 + " (Screen Door)" },
-                            { label: " " + i4 + " (Tritone Perfect)" },
-                            { label: " " + i5 + " (Tritone Back Door)" },
-                            { label: " " + i6 + " (Tritone Screen Door / Plagal)" }
+                            { label: " " + i1 + "7 (Perfect)" },
+                            { label: " " + i2 + "7 (Back Door)" },
+                            { label: " " + i3 + "7 (Screen Door)" },
+                            { label: " " + i4 + "7 (Tritone Perfect)" },
+                            { label: " " + i5 + "7 (Tritone Back Door)" },
+                            { label: " " + i6 + "7 (Tritone Screen Door / Plagal)" }
                         ];
                         leftBoxes = dompivotlist;
                         break;
