--- a/index.html
+++ b/index.html
@@ -8,23 +8,17 @@
         whole {
             margin: auto;
             margin-top: -20px;
+            height: auto;
             padding: 20px;
             background: transparent;
-            display: grid;
-            grid-template-rows: auto auto;
-            grid-row-gap: 10px;
-            justify-content: center;
-            align-items: center;
+            display: inline;
             min-height: 10vh;
         }
         description {
             margin: auto;
-            margin-top: -300px;
             background: #1a1a1a;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
+            display: inline;
+            margin-inline: 6px;
             font-family: Helvetica, sans-serif;
         }
         #dcontainer {
