--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         #dtextcontainer{
             margin: 12px;
             margin-top: 4px;
+            margin-bottom: 6px;
             border: 60px;
             position: absolute;
             color: white;
