--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             margin-top: 4px;
             margin-bottom: 6px;
             border: 60px;
-            position: absolute;
+            /*position: relative;*/
             color: white;
             z-index: 10;
         }
