--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         #dcontainer {
             width: 680px;
-            height: 170px;
+            height: auto;
             background: #2a2a2a;
             border-radius: 10px;
             padding: 20px;
@@ -35,7 +35,6 @@
             margin-top: 4px;
             margin-bottom: 6px;
             border: 60px;
-            /*position: relative;*/
             color: white;
             z-index: 10;
         }
