--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             font-family: Helvetica, sans-serif;
         }
         #dcontainer {
-            width: 680px;
+            max-width: 680px;
+            width: 100%;
             height: auto;
             background: #2a2a2a;
             border-radius: 10px;
