--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
 
         #dcontainer {
-            width: calc(var(--base-width) * var(--scale-factor) - 66px * var(--scale-factor));
+            width: calc(var(--base-width) * var(--scale-factor));
             height: auto;
             top: calc(-10px * var(--scale-factor));
             background: #2a2a2a;
@@ -66,7 +66,7 @@
         }
 
         #container {
-            width: calc(var(--base-width) * var(--scale-factor) - 66px * var(--scale-factor));
+            width: calc(var(--base-width) * var(--scale-factor));
             height: calc(var(--base-height) * var(--scale-factor) - 50px * var(--scale-factor));
             top: calc(-10px * var(--scale-factor));
             background: #2a2a2a;
