--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Diminished Resolutions</title>
     <style>
         :root {
-            --scale-factor: 1;
+            --scale-factor: 0.8;
             --base-width: 720px;
             --base-height: 500px;
         }
@@ -48,14 +48,9 @@
             z-index: 10;
         }
 
-/*        .dtext {
-            top: calc(32px * var(--scale-factor));
-            color: white;
-        }*/
-
-        #dtextspan span {
+        #dtext span {
             white-space: pre-wrap;
-            width: calc(640px * var(--scale-factor));
+            width: calc(var(--base-width) * var(--scale-factor));
             display: block;
             font-size: calc(10px * var(--scale-factor * 0.85));
         }
@@ -332,11 +327,11 @@
         <description>
             <div id="dcontainer">
                 <div id="dtextcontainer">
-                    <div id="dtext"><span style="font-size: calc(12px * var(--scale-factor));"><p>Every diminished 7 chord can resolve to 4 unique dominant 7 chords by moving any chord tone down by a semitone.</p>
-                    <p></p>
-                    <p>This project aims to help visualise these resolution pathways by starting from a diminished 7, or working backwards from a resolution key. Use the dropdown menu to switch between these modes, and click around the circle of fifths and chord suggestions to set your desired pathway.</p>
-                    <p></p>
-                    The six most common jazz cadences are displayed, opening potential modulations to and from any key, but these pathways are non exhaustive, so please explore your own modal and non-tonic resolutions :)</span></div>
+                    <div id="dtext"><span>Every diminished 7 chord can resolve to 4 unique dominant 7 chords by moving any chord tone down by a semitone.
+                    
+This project aims to help visualise these resolution pathways by starting from a diminished 7, or working backwards from a resolution key. Use the dropdown menu to switch between these modes, and click around the circle of fifths and chord suggestions to set your desired pathway.
+                    
+The six most common jazz cadences are displayed, opening potential modulations to and from any key, but these pathways are non exhaustive, so please explore your own modal and non-tonic resolutions :)</span></div>
                 </div>
             </div>
         </description>
