--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Diminished Resolutions</title>
     <style>
         :root {
-            --scale-factor: 0.2;
+            --scale-factor: 1;
             --base-width: 720px;
             --base-height: 500px;
         }
@@ -14,7 +14,6 @@
         whole {
             margin: auto;
             height: auto;
-            padding: calc(0px * var(--scale-factor));
             background: transparent;
             display: block;
             min-height: 10vh;
@@ -36,12 +35,14 @@
             background: #2a2a2a;
             border-radius: calc(10px * var(--scale-factor));
             padding: calc(20px * var(--scale-factor));
+            margin-left: calc(0.01 * var(--base-width));
+            padding-left: calc(-0.01 * var(--base-width));
             box-shadow: 0 calc(4px * var(--scale-factor)) calc(20px * var(--scale-factor)) rgba(0,0,0,0.5);
             position: relative;
         }
 
         #dtextcontainer {
-            margin: calc(12px * var(--scale-factor));
+            margin: calc(24px * var(--scale-factor));
             margin-top: calc(4px * var(--scale-factor));
             margin-bottom: calc(6px * var(--scale-factor));
             color: white;
@@ -74,6 +75,8 @@
             background: #2a2a2a;
             border-radius: calc(10px * var(--scale-factor));
             padding: calc(20px * var(--scale-factor));
+            margin-left: calc(0.01 * var(--base-width));
+            padding-left: calc(-0.01 * var(--base-width));
             box-shadow: 0 calc(4px * var(--scale-factor)) calc(20px * var(--scale-factor)) rgba(0,0,0,0.5);
             position: relative;
         }
@@ -100,7 +103,7 @@
 
         #dropdown-container {
             position: absolute;
-            right: calc(53px * var(--scale-factor));
+            right: calc(53px * var(--scale-factor) - 0.01 * var(--base-width));
             top: calc(6px * var(--scale-factor));
             margin-top: calc(20px * var(--scale-factor));
             margin-bottom: calc(10px * var(--scale-factor));
@@ -125,6 +128,7 @@
             width: calc(var(--base-width) * var(--scale-factor));
             height: calc(460px * var(--scale-factor));
             position: relative;
+            margin-left: calc(0.01 * var(--base-width));
             margin-top: calc(-6px * var(--scale-factor));
             margin-bottom: calc(10px * var(--scale-factor));
         }
