--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             background: transparent;
             display: block;
             min-height: 1vh;
-            zoom: 98%;
+            zoom: calc(80% * var(--scale-factor));
             user-zoom: fixed;
             flex-wrap: nowrap;
         }
