--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             background: transparent;
             display: block;
             min-height: 1vh;
-            user-zoom: fixed;
-            flex-wrap: nowrap;
+            align-items: margin-top;
         }
 
         description {
@@ -54,6 +53,7 @@
             white-space: pre-wrap;
             width: calc(var(--base-width) * var(--scale-factor) - (26px * var(--scale-factor)));
             display: block;
+            flex-wrap: nowrap;
             font-size: calc(12.6px * var(--scale-factor));
         }
 
