--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             display: block;
             min-height: 1vh;
             align-items: margin-top;
+            scale: 0.95;
         }
 
         description {
