--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
 
         #dtext span {
             white-space: pre-wrap;
+            flex-wrap: nowrap;
             width: calc(var(--base-width) * var(--scale-factor) - (26px * var(--scale-factor)));
             display: block;
             flex-wrap: nowrap;
-            font-size: calc(12.6px * var(--scale-factor));
+            font-size: 1vw;
         }
 
         body {
