--- a/index.html
+++ b/index.html
@@ -68,12 +68,11 @@
         }
 
         #dtext span {
-            white-space: pre-wrap;
-            flex-wrap: nowrap;
+            white-space: nowrap;
             width: calc(var(--base-width) * var(--scale-factor) - (26px * var(--scale-factor)));
             display: block;
-            flex-wrap: nowrap;
-            font-size: 1vw;
+            font-size: calc(12.6px * var(--scale-factor));
+            line-break: none;
         }
 
         body {
@@ -350,10 +349,8 @@
             <div id="dcontainer">
                 <div id="dtextcontainer">
                     <div id="dtext"><span>Every diminished 7 chord can resolve to 4 unique dominant 7 chords by moving any chord tone down by a semitone.
-                    
-This project aims to help visualise these resolution pathways by starting from a diminished 7, or working backwards from a resolution key. Use the dropdown menu to switch between these modes, and click around the circle of fifths and chord suggestions to set your desired pathway.
-                    
-The six most common jazz cadences are displayed, opening potential modulations to and from any key, but these pathways are non exhaustive, so please explore your own modal and non-tonic resolutions :)</span></div>
+                    <p>This project aims to help visualise these resolution pathways by starting from a diminished 7, or working backwards from <br> a resolution key. Use the dropdown menu to switch between these modes, and click around the circle of fifths and chord <br> suggestions to set your desired pathway.</p>
+                    <p>The six most common jazz cadences are displayed, opening potential modulations to and from any key, but these pathways <br> are non exhaustive, so please explore your own modal and non-tonic resolutions :)</p></span></div>
                 </div>
             </div>
         </description>
