--- a/index.html
+++ b/index.html
@@ -112,11 +112,13 @@
             font-size: calc(30px * var(--scale-factor));
             font-weight: bold;
             margin-bottom: calc(5px * var(--scale-factor));
+            white-space: nowrap;
         }
 
         #subtitle {
             font-size: calc(20px * var(--scale-factor));
             font-style: italic;
+            white-space: nowrap;
         }
 
         #dropdown-container {
