--- a/index.html
+++ b/index.html
@@ -359,6 +359,19 @@
         </description>
 
         <script>
+            window.addEventListener('load', function() {
+                updateScaleFactor();
+                // Force a redraw after a tiny delay to ensure scaling is applied
+                setTimeout(function() {
+                    updateScaleFactor();
+                    if (initialized) {
+                        createBoxes();
+                        updateNotePositions();
+                        drawLines();
+                    }
+                }, 50);
+            });
+
             // Function to calculate and set the scale factor based on viewport size
             function updateScaleFactor() {
                 const baseWidth = 720;
@@ -953,10 +966,10 @@
             // ========================================
             // WINDOW RESIZE HANDLING
             // ========================================
-            window.addEventListener('load', updateScaleFactor);
-            window.addEventListener('resize', updateScaleFactor);
+            window.addEventListener('resize', function() {
+                updateScaleFactor();
+            });
 
-            // Initialize after DOM is fully loaded
             document.addEventListener('DOMContentLoaded', init);
         </script>
     </body>
