--- a/index.html
+++ b/index.html
@@ -957,18 +957,20 @@
             // ========================================
             // WINDOW RESIZE HANDLING
             // ========================================
-            window.addEventListener('load', function() {
-                updateScaleFactor();
-                // Force a redraw after a tiny delay to ensure scaling is applied
-                setTimeout(function() {
-                    updateScaleFactor();
-                    if (initialized) {
-                        updateNotePositions();
-                        createBoxes();
-                        drawLines();
-                    }
-                }, 50);
-            });
+            // window.addEventListener('load', function() {
+            //     updateScaleFactor();
+            //     // Force a redraw after a tiny delay to ensure scaling is applied
+            //     setTimeout(function() {
+            //         updateScaleFactor();
+            //         if (initialized) {
+            //             createBoxes();
+            //             updateNotePositions();
+            //             drawLines();
+            //         }
+            //     }, 50);
+            // });
+
+            window.addEventListener('load', init);
 
             window.addEventListener('resize', function() {
                 updateScaleFactor();
