--- a/index.html
+++ b/index.html
@@ -965,6 +965,7 @@
                     if (initialized) {
                         createBoxes();
                         updateNotePositions();
+                        updateActiveStates();
                         drawLines();
                     }
                 }, 50);
